k8s/ddi.webserviceonly.dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: omicsdi-ddi-webservice
  namespace: dev
  labels:
    app: omicsdi-ddi-webservice
spec:
  ports:
    - port: 8090
      targetPort: 8080
  selector:
    app: omicsdi-ddi-webservice-pod
