k8s/ddi.ingress.prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: omicsdi-webservice-prod
  namespace: prod
spec:
  rules:
    - host: stage.omicsdi.org
      http:
        paths:
          - path: /ws
            backend:
              serviceName: omicsdi-ddi-webservice
              servicePort: 8080
